Updated UI: Removed top casino section, changed button text color, updated Ko-fi link text

--- a/index.html
+++ b/index.html
@@ -23,9 +23,6 @@
   </header>
 
   <main>
-    <h2>🎯 Top Collected Casino Today</h2>
-    <div id="top-casino"></div>
-
     <h3>💎 Casino Bonus Links</h3>
     <table class="tracker-table">
       <thead>
@@ -40,7 +37,7 @@
   </main>
 
   <footer>
-    <a href="https://ko-fi.com/jmenichole0" class="support-button">💝 Support CollectClock</a>
+    <a href="https://ko-fi.com/jmenichole0" class="support-button">☕ Buy Me a Coffee</a>
   </footer>
 
   <div id="gif-popup" style="display:none;" class="popup">
