--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
   </header>
 
   <main>
-    <h3>💎 Casino Bonus Links</h3>
+    <h3>💎 Casino Links</h3>
     <table class="tracker-table">
       <thead>
         <tr>
           <th>Casino</th>
           <th>Collect</th>
-          <th>Note</th>
+          <th></th>
         </tr>
       </thead>
       <tbody id="casino-list"></tbody>
